<resources>
    <string name="app_name">Condhominus</string>
    <string name="placeholder_age">Idade</string>
    <string name="placeholder_apto">Apto</string>
    <string name="placeholder_block">Bloco</string>
    <string name="placeholder_name">Nome completo</string>
    <string name="placeholder_apto_register">Número Apartamento</string>
    <string name="save">Salvar</string>
    <string name="update_profile">Atualizar perfil</string>
    <string name="edit">Editar</string>
    <string name="dont_logged">Faça login</string>
    <string name="accomplish_login">Fazer login</string>
    <string name="register_tenant">Cadastro de Inquilino</string>
    <string name="register_condominium">Cadastro de Condomínio</string>
    <string name="condominium">Condomínio</string>
    <string name="email">Email</string>
    <string name="obs">Observação</string>
    <string name="placeholder_document">Informe seu CPF</string>
    <string name="password">Senha</string>
    <string name="born_date">Data de nascimento</string>
    <string name="login">Login</string>
    <string name="logged">Bem vindo, %s!</string>
    <string name="logged_adm">Bem vindo, User!</string>
    <string name="register">Salvar</string>
    <string name="apply_document">Informe um CPF ou senha válido(a)</string>
    <string name="all_fields">Preencha todos os campos</string>
    <string name="title_admin_name">Olá, %s!</string>
    <string name="zip_code">CEP</string>
    <string name="street">Logradouro</string>
    <string name="city">Cidade</string>
    <string name="state">Estado</string>
    <string name="country">País</string>
    <string name="number">Número</string>
    <string name="name">Nome do Condomínio</string>
    <string name="agendas_disponiveis">Agendas disponíveis</string>
    <string name="date">Data</string>
    <string name="seleted_period">Selecione um período para agendamento</string>
</resources>